<resources>
    <string name="app_name">MyAssistant</string>
    <string name="exit">Exit</string>
    <string name="hello">Hello</string>
    <string name="welcome_to">Welcome to your personal assistance app</string>
    <string name="contacts_options">Contacts options</string>
    <string name="dial">dial</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_text">Enter text</string>
    <string name="send">Send</string>
    <string name="search_location">Search location</string>
    <string name="search">search</string>
    <string name="enter_sourse_location">Enter start location</string>
    <string name="enter_destination_loction">Enter destination loction</string>
    <string name="send_email">Send email</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="set_alarm_clock">Set Alarm Clock</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="set_time">Set Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="choose_lang">Please choose a language</string>
    <string name="event_form">Event form</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="create_event">Create event</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="dial_a_contact">Dial a contact</string>
    <string name="create_calendar_event">Create Calendar event</string>
    <string name="web_search">Web Search</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="date">Date</string>
    <string name="capture_image">Capture Image</string>
    <string name="create_contact">Create contact</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="company">Company</string>
    <string name="capture_an_image">Capture an image</string>
</resources>